AI metadata: Fix column overflow on mobile.

--- a/app/javascript/src/styles/specific/ai_metadata.scss
+++ b/app/javascript/src/styles/specific/ai_metadata.scss
@@ -35,3 +35,14 @@ div.ui-dialog form.simple_form div.custom-metadata-field {
     margin-left: 0.25em;
   }
 }
+
+table.ai-metadata-table {
+  th {
+    width: 160px;
+    word-wrap: anywhere;
+  }
+
+  td {
+    word-wrap: anywhere;
+  }
+}
